Implemented a window for a neural network training window on the specified data

--- a/SOM_Kohonen_WpfApp/App.xaml
+++ b/SOM_Kohonen_WpfApp/App.xaml
@@ -4,6 +4,16 @@
              xmlns:local="clr-namespace:SOM_Kohonen_WpfApp"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="Styles/Datagrid.xaml"/>
+
+            </ResourceDictionary.MergedDictionaries>
+
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
