--- a/SOM_Kohonen_WpfApp/Views/MainWindow.xaml
+++ b/SOM_Kohonen_WpfApp/Views/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Menu Grid.Row="0"
@@ -35,12 +36,37 @@
 
         </Menu>
 
-        <ScrollViewer Grid.Row="1">
+        <ScrollViewer Grid.Row="1"
+                      Margin="0,0,0,10">
 
             <WrapPanel x:Name="MainGrid"
                        Margin="10"/>
 
         </ScrollViewer>
+
+        <Grid x:Name="StatisticsGrid" 
+              Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="0"
+                   FontSize="15"
+                   FontWeight="Bold"
+                   Margin="10,0,0,0">
+                Average values:
+            </Label>
+
+            <ListView x:Name="StatisticsListView"
+                      Grid.Row="1"
+                      FontSize="15"
+                      MaxHeight="200"
+                      Margin="10,0,10,10"
+                      ScrollViewer.VerticalScrollBarVisibility="Visible"
+                      Background="WhiteSmoke"/>
+
+        </Grid>
     </Grid>
 
 </Window>
