--- a/SOM_Kohonen_WpfApp/Views/MainWindow.xaml
+++ b/SOM_Kohonen_WpfApp/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Self-organizing maps | Іващенко КНм-2-2"
+        Title="Self-organizing maps | O. Ivashchenko"
         Height="700"
         Width="830"
         Background="WhiteSmoke"
@@ -14,6 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
@@ -33,6 +34,10 @@
             <MenuItem Header="_Tools">
                 <MenuItem Header="SOM Wizard" Click="New_Click"/>
             </MenuItem>
+            
+            <MenuItem Header="_View" x:Name="ViewMenu">
+                
+            </MenuItem>
 
         </Menu>
 
@@ -44,8 +49,20 @@
 
         </ScrollViewer>
 
+        <Grid Grid.Row="2">
+            
+            <Label x:Name="MapSeedLabel"
+                   Grid.Row="2"
+                   FontSize="15"
+                   FontWeight="Bold"
+                   Margin="10,0,0,0">
+                
+            </Label>
+            
+        </Grid>
+
         <Grid x:Name="StatisticsGrid" 
-              Grid.Row="2">
+              Grid.Row="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
